syntax = "proto3";

package room;

option java_multiple_files = true;
option java_package = "com.roomreservation.contracts.room.grpc";

service RoomGrpcService {
  rpc GetRoomSummaries(GetRoomSummariesRequest) returns (GetRoomSummariesResponse);
}

message GetRoomSummariesRequest {
  repeated int64 roomIds = 1;
}

message RoomSummary {
  int64 roomId = 1;
  string name = 2;
}

message GetRoomSummariesResponse {
  repeated RoomSummary rooms = 1;
}